fix: hide sidebar only on mobile when looking at a transaction

--- a/web-example/src/index.css
+++ b/web-example/src/index.css
@@ -68,8 +68,12 @@ code {
   }
 }
 
-.hide {
+.hide-on-mobile {
   display: none;
+
+  @media screen and (min-width: 740px) {
+    display: block;
+  }
 }
 
 #root {
